# OpenGL

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  clean_build.bat  compile_commands.json  justfile  meson.build
.cache/clangd/index/: arrayBuffer.h.B205929E42BEEE9A.idx  arrayBuffer.hpp.2B62C24E086CECC0.idx  constants.h.935CAF54B2BF5CA4.idx  constants.hpp.CFF400CB86B741B3.idx  glad.c.A536139784C2C5AD.idx  glad.h.3B3D3575ABC4D807.idx  khrplatform.h.AFF6F40A31FED6F9.idx  main.c.0B07E4B2BBCC1481.idx  main.cpp.0F2542DD584DCB43.idx  shader.hpp.B0D0F40E63767715.idx  utils.hpp.29E10C0745E6C380.idx  vertexArrayBuffer.h.FAB29A5745409BBD.idx  vertexArrayBuffer.hpp.587E99A680C71745.idx  window.c.84FAAF3FB2027312.idx  window.h.C210CB19481E1832.idx  window.hpp.59FD0AC103B332A2.idx
assets/shaders/: shader.frag  shader.fs  shader.vert  shader.vs
include/: arrayBuffer.hpp  defines.hpp  shader.hpp  texture.hpp  utils.hpp  vertexArray.hpp  window.hpp
include/application/: application.hpp  constants.hpp
include/engine/: arrayBuffer.hpp  camera.hpp  drawable.hpp  primative.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  utils.hpp  vertexArrayBuffer.hpp  window.hpp
src/: arrayBuffer.cpp  cleanup.c  cleanup.h  defines.h  engineState.h  entity.c  entity.h  error_handling.h  init.c  init.h  main.c  main.cpp  mesh.c  mesh.h  mvp.c  mvp.h  renderer.c  renderer.h  shader.cpp  shaders.c  shaders.h  texture.cpp  transform.c  transform.h  utils.cpp  vertexArray.cpp  window.cpp
src/application/: application.cpp
src/engine/: arrayBuffer.cpp  camera.cpp  drawable.cpp  entity.cpp  entity.hpp  error_handling.hpp  main.c  main.cpp  material.cpp  material.hpp  mesh.c  mesh.cpp  mesh.h  mesh.hpp  primative.cpp  renderer.cpp  scene.cpp  shader.c  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.hpp  vertexArrayBuffer.cpp  window.cpp
src/game/: game.c  game.h
src/resources/shaders/: shader.frag  shader.vert
